--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ section {
     align-items: center;
     justify-content: space-around;
     transition: opacity 0.5s ease;
+    margin-top: 50px;;
 }
 
 .intro h1 {
@@ -154,6 +155,13 @@ div.fadeIn {
 div.tweet{
     position: absolute;
     top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+div.line-share-button {
+    position: absolute;
+    top: 56%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
